--- a/index.html
+++ b/index.html
@@ -1,193 +1,273 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gustavo Menescal</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <!-- Início do Cabeçalho -->
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dev Letícia</title>
+  <link rel="stylesheet" href="main.css" />
+  <script src="scripts.js"></script>
+</head>
+
+<body>
+
+
+  <!-- Início do Cabeçalho -->
+  <!DOCTYPE html>
+  <html lang="pt-BR">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exemplo de Navegação</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que o CSS está sendo carregado corretamente -->
+  </head>
+
+  <body>
     <header id="navegacao">
-      <h1><i class="bi bi-boxes"></i></h1>
+      <h1>
+        <span class="caractere-maior">&lt;</span>
+        <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/computador.png" alt="Ícone de computador" />
+        <span class="caractere-maior">&gt;</span>
+      </h1>
       <nav>
         <ul>
-          <li><a href="#inicio"> Início </a></li>
-          <li><a href="#experiencias"> Experiências </a></li>
-          <li><a href="#habilidades"> Habilidades </a></li>
-          <li><a href="#projetos"> Projetos </a></li>
-          <li><a href="#contato"> Contato </a></li>
+          <li><a href="#inicio">Início</a></li>
+          <li><a href="#experiencias">Experiências</a></li>
+          <li><a href="#habilidades">Habilidades</a></li>
+          <li><a href="#projetos">Projetos</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
+
     </header>
-
-    <!-- Fim do Cabeçalho -->
-
-    <!-- Início da Seção Início -->
-
-    <section id="inicio">
-      <div class="inicioApresentacao">
-        <img src="./assets/images/eu.png" alt="Emoji de DEV" />
-        <div>
-          <span>Olá eu sou <b>Gustavo Menescal</b> </span>
-            <h1>Julga um livro <br> pela <b>capa</b>...</h1>
-            <p>Porque se a capa não te impressiona, o que mais pode?</p>
-        </div>
-      </div>
-
-      <div class="inicioSobre">
-        <h2>Desenvolvedor WEB</h2>
-        <h3>Atualmente, aluno no <a target="_blank" href="https://www.cpdi.org.br/">CPDI</a>.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, provident aliquid incidunt magnam perspiciatis eaque repellat accusantium enim esse natus! Tempore, sapiente repudiandae. Inventore sit omnis quos molestias. Doloremque, illo?</p>
-      </div>
-    </section>
-
-    <!-- Fim da Seção Início -->
-
-    <!-- Início da Seção Experiência. -->
-
-    <section id="experiencias">
-      <h1>Experiências</h1>
-
-      <div class="experienciasContainer">
-        <div>
-          <img src="./assets/images/experiencia1.png" alt="Ilustração Experiências">
-          <div>
-            <h2>Front End</h2>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <a target="_blank" href="">Saiba mais</a>
-          </div>
-        </div>
-
-        <div>
-          <img src="./assets/images/experiencia2.png" alt="Ilustração Experiências">
-          <div>
-            <h2>Front End</h2>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <a target="_blank" href="">Saiba mais</a>
-          </div>
-        </div>
-
-        <div>
-          <img src="./assets/images/experiencia3.png" alt="Ilustração Experiências">
-          <div>
-            <h2>Front End</h2>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <a target="_blank" href="">Saiba mais</a>
-          </div>
-        </div>
-
-        <div>
-          <img src="./assets/images/experiencia4.png" alt="Ilustração Experiências">
-          <div>
-            <h2>Front End</h2>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <a target="_blank" href="">Saiba mais</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Fim da Seção Experiências -->
-
-    <!-- Início Seção Habilidades -->
-
-    <section id="habilidades">
-      <div>
-        <h1>Habilidades</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias
-          odio repudiandae ad quo quos nesciunt necessitatibus. Natus excepturi
-          ut sunt consequatur, vitae blanditiis, ipsam possimus itaque, debitis
-          ipsum quos delectus.
-        </p>
-      </div>
-
-        <ul>
-          <li><img src="./assets/images/html.png" alt="HTML"></li>
-          <li><img src="./assets/images/css.png" alt="CCS"></li>
-          <li><img src="./assets/images/js.png" alt="JS"></li>
-          <li><img src="./assets/images/figma.png" alt="FIGMA"></li>
-          <li><img src="./assets/images/react.png" alt="REACT"></li>
-        </ul>
-
-      <img src="./assets/images/Ilustracao.png" alt="Ilustração Habilidades" />
-    </section>
-
-    <!-- Fim da Seção Habilidades -->
-
-    <!-- Início da Seção Projetos -->
-
-    <section id="projetos">
-      <div class="projeto inverter">
-        <img src="./assets/images/projeto.png" alt=" Ilustração Projeto">
-        <div>
-          <span>Feature Project</span>
-          <h1>Example Project</h1>
-          <div class="fundoDesfocado">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, delectus dicta? Itaque accusantium aperiam officia quaerat id natus libero facilis optio, doloribus facere temporibus dolor odio dolore sit iusto dicta.
-            </p>
-          </div>
-          <a href=""><i class="bi bi-github"></i> GitHub</a>
-          <a href=""><i class="bi bi-globe-americas"></i> Site</a>
-        </div>
-      </div>
-
-      <div class="projeto">
-        <img src="./assets/images/projeto.png" alt="Ilustração Projeto">
-        <div>
-          <span>Feature Project</span>
-          <h1>Example Project</h1>
-          <div class="fundoDesfocado">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, delectus dicta? Itaque accusantium aperiam officia quaerat id natus libero facilis optio, doloribus facere temporibus dolor odio dolore sit iusto dicta.
-            </p>
-          </div>
-          <a href=""><i class="bi bi-github"></i> GitHub</a>
-          <a href=""><i class="bi bi-globe-americas"></i> Site</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Final da Seção Projetos -->
-
-    <!-- Início da Seção Contato -->
-
-    <section id="contato">
-      <h1>Entre em Contato</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem amet
-        nobis modi possimus dicta eos vel doloribus, ratione pariatur! Alias
-        optio omnis dignissimos suscipit architecto? Accusamus adipisci dolores
-        fugit odit!
-      </p>
-      <p><i class="bi bi-envelope-at"></i> menescal@gmail.com</p>
-        <a target="_blank" href="https://www.instagram.com/gmenescal/"><i class="bi bi-instagram"></i> Instagram</a>
-        <a target="_blank" href="https://www.linkedin.com/in/gustavo-menescal/"><i class="bi bi-linkedin"></i> LinkedIn</a>
-    </section>
-
-    <!-- Fim da seção Contato -->
-
-    <!-- Início do Rodapé -->
-
-    <footer id="rodape">
-      <p>&copy; Direitos Reservados 2024</p>
-    </footer>
-
-    <!-- Final do Rodapé -->
   </body>
-</html>
 
-<!-- Melhor forma de criação de conteúdo. -->
-<!-- header#navegacao>nav>ul>li*5>a -->
-<!-- <header id="navegacao">
-    <nav>
-        <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </nav>
-</header> -->
+  </html>
+
+
+
+
+
+  <!-- Início da Seção Início -->
+  <section id="inicio" class="custom-border-radius">
+    <div class="inicioApresentacao">
+      <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/ofundo.gif" alt="gif de mulher programadora"
+        class="gif-programadora">
+      <div class="texto-conteudo">
+        <span class="saudacao">Olá, eu sou <b>Letícia Paula</b></span>
+
+        <h1>Desenvolvedora <br> em constante <b>evolução</b>...</h1>
+        <p class="fade-up">Moldando o futuro digital <br>com cada linha de código.</p>
+      </div>
+    </div>
+    <div class="inicioSobre">
+      <h2>Desenvolvedora Fullstack</h2>
+      <h3>Atualmente, aluna no <a target="_blank" href="https://www.cpdi.org.br/">CPDI</a>.</h3>
+      <p class="justificado crimson-text">Atualmente, estou aprofundando meus conhecimentos em desenvolvimento web e
+        software. Tenho
+        experiência prática tanto com frontend quanto com backend, o que me permite criar soluções completas e
+        integradas. Meu foco é desenvolver aplicações eficientes e escaláveis que atendam às necessidades reais de
+        usuários e empresas.</p>
+    </div>
+  </section>
+
+
+
+
+
+
+
+  <section id="experiencias">
+    <h1>Experiências</h1>
+  
+    <div class="experienciasContainer">
+      <div>
+        <img src="./assets/images/experiencia1.png" alt="Ilustração Experiências">
+        <div class="experienciaDetalhes">
+          <h2>Front End</h2>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <a target="_blank" href="">Saiba mais</a>
+        </div>
+      </div>
+  
+      <div>
+        <img src="./assets/images/experiencia2.png" alt="Ilustração Experiências">
+        <div class="experienciaDetalhes">
+          <h2>Front End</h2>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <a target="_blank" href="">Saiba mais</a>
+        </div>
+      </div>
+  
+      <div>
+        <img src="./assets/images/experiencia3.png" alt="Ilustração Experiências">
+        <div class="experienciaDetalhes">
+          <h2>Front End</h2>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <a target="_blank" href="">Saiba mais</a>
+        </div>
+      </div>
+  
+      <div>
+        <img src="./assets/images/experiencia4.png" alt="Ilustração Experiências">
+        <div class="experienciaDetalhes">
+          <h2>Front End</h2>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <a target="_blank" href="">Saiba mais</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <!-- Fim da Seção Experiências -->
+
+  <!-- Início da Seção Habilidades -->
+  <!-- Início da Seção Habilidades -->
+<section id="habilidades">
+  <h1>Habilidades</h1>
+  <p>Estou aprimorando minhas habilidades em desenvolvimento e design, com experiência em HTML e CSS para criação e
+    estilização de páginas web. Estou integrando JavaScript para adicionar interatividade e utilizando o Figma para
+    criar designs e protótipos eficazes. Além disso, estou desenvolvendo habilidades em bancos de dados com MySQL.</p>
+  <div class="skills-container">
+    <div class="skill-card">
+      <img src="./assets/images/java.png" alt="Java" class="skill-icon"> <!-- Adicione a imagem de Java -->
+      <div class="skill-info">
+        <h2>Java</h2>
+        <div class="tooltip">
+          <p>Linguagem de Programação para desenvolvimento de aplicações robustas e escaláveis.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skill-card">
+      <img src="./assets/images/html.png" alt="HTML" class="skill-icon">
+      <div class="skill-info">
+        <h2>HTML</h2>
+        <div class="tooltip">
+          <p>Linguagem de Marcação de Hipertexto para criar páginas web.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skill-card">
+      <img src="./assets/images/css.png" alt="CSS" class="skill-icon">
+      <div class="skill-info">
+        <h2>CSS</h2>
+        <div class="tooltip">
+          <p>Folhas de Estilo em Cascata para estilizar páginas web.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skill-card">
+      <img src="./assets/images/js.png" alt="JavaScript" class="skill-icon">
+      <div class="skill-info">
+        <h2>JavaScript</h2>
+        <div class="tooltip">
+          <p>Linguagem de Programação para adicionar interatividade às páginas web.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skill-card">
+      <img src="./assets/images/figma.png" alt="Figma" class="skill-icon">
+      <div class="skill-info">
+        <h2>Figma</h2>
+        <div class="tooltip">
+          <p>Ferramenta de design de interface e prototipagem.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skill-card">
+      <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/mysql.png" alt="MySQL" class="skill-icon"> <!-- Adicione a imagem do MySQL -->
+      <div class="skill-info">
+        <h2>MySQL</h2>
+        <div class="tooltip">
+          <p>Sistema de Gerenciamento de Banco de Dados Relacional para armazenamento e gerenciamento de dados.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/code.gif" alt="Ilustração Habilidades" />
+</section>
+<!-- Fim da Seção Habilidades -->
+
+
+
+
+  <!-- Início da Seção Projetos -->
+  <section id="projetos">
+    <h1>Projetos</h1>
+    <div class="projeto">
+      <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/1projetos.png" alt="Ilustração Projeto">
+      <div>
+        <span>Landing Page</span>
+        <h2>Dev Fullstack</h2>
+        <div class="fundoDesfocado">
+          <p>Desenvolvi uma landing page para exibir minhas habilidades e experiência como desenvolvedora fullstack. O
+            design é responsivo e fácil de navegar, destacando competências, projetos e informações de contato de forma
+            clara e envolvente.</p>
+        </div>
+        <a href="#"><i class="bi bi-github"></i> GitHub</a>
+        <a href="#"><i class="bi bi-globe-americas"></i> Site</a>
+      </div>
+    </div>
+
+    <!-- Repetir para outros projetos -->
+  </section>
+  <!-- Fim da Seção Projetos -->
+
+  <!-- Fim da Seção Projetos -->
+
+  <section class="section-image1">
+    <div class="parallax-content">
+
+    </div>
+  </section>
+
+  <!-- Início da Seção Contato -->
+  <section id="contato">
+    <h1>Entre em Contato</h1>
+    <p class="lorem-text">Preencha o formulário abaixo e entrarei em contato com você.</p>
+    <div class="form-container">
+      <form action="">
+        <div class="input-single">
+          <label for="nome-box">Seu nome completo</label>
+          <input type="text" name="nome" id="nome-box" class="input" required>
+        </div>
+        <div class="input-single">
+          <label for="email-box">Seu email</label>
+          <input type="email" name="email" id="email-box" class="input" required>
+        </div>
+        <div class="input-single">
+          <label for="mensagem-box">Sua mensagem</label>
+          <textarea name="mensagem" id="mensagem-box" class="input" rows="4" required></textarea>
+        </div>
+        <div class="btn">
+          <input type="submit" value="Enviar">
+        </div>
+      </form>
+    </div>
+    <p><i class="bi bi-envelope-at"></i> leticiapaulade@gmail.com</p>
+
+    <div class="social-links">
+      <a class="social-link github-link" target="_blank" href="https://github.com/leti-poliveira">
+        <i class="bi bi-github"></i> GitHub
+      </a>
+      <a class="social-link linkedin-link" target="_blank" href="https://www.linkedin.com/in/letipoliveira/">
+        <i class="bi bi-linkedin"></i> LinkedIn
+      </a>
+    </div>
+  </section>
+  <!-- Fim da Seção Contato -->
+
+
+  <!-- Início do Rodapé -->
+  <footer id="rodape">
+    <p>&copy; 2024 Letícia Paula. Criado com carinho e dedicação. Todos os direitos reservados.</p>
+  </footer>
+  <!-- Fim do Rodapé -->
+
+  <!-- Inclusão do JavaScript -->
+  <script src="scripts.js"></script>
+</body>
+
+</html>
