--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header id="navegacao">
       <h1>
         <span class="caractere-maior">&lt;</span>
-        <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/computador.png" alt="Ícone de computador" />
+        <img src="/images/computador.png" alt="Ícone de computador" />
         <span class="caractere-maior">&gt;</span>
       </h1>
       <nav>
@@ -52,11 +52,9 @@
   <!-- Início da Seção Início -->
   <section id="inicio" class="custom-border-radius">
     <div class="inicioApresentacao">
-      <img src="/Turma_2_Localiza_2024_Portfolio/assets/images/ofundo.gif" alt="gif de mulher programadora"
-        class="gif-programadora">
+      <img src="/images/ofundo.gif" alt="gif de mulher programadora" class="gif-programadora">
       <div class="texto-conteudo">
-        <span class="saudacao">Olá, eu sou <b>Letícia Paula</b></span>
-
+        <span class="saudacao">Olá, eu sou <b><span class="nome">Letícia Paula</span></b></span>
         <h1>Desenvolvedora <br> em constante <b>evolução</b>...</h1>
         <p class="fade-up">Moldando o futuro digital <br>com cada linha de código.</p>
       </div>
@@ -64,14 +62,10 @@
     <div class="inicioSobre">
       <h2>Desenvolvedora Fullstack</h2>
       <h3>Atualmente, aluna no <a target="_blank" href="https://www.cpdi.org.br/">CPDI</a>.</h3>
-      <p class="justificado crimson-text">Atualmente, estou aprofundando meus conhecimentos em desenvolvimento web e
-        software. Tenho
-        experiência prática tanto com frontend quanto com backend, o que me permite criar soluções completas e
-        integradas. Meu foco é desenvolver aplicações eficientes e escaláveis que atendam às necessidades reais de
-        usuários e empresas.</p>
+      <p class="justificado crimson-text">Atualmente, estou aprofundando meus conhecimentos em desenvolvimento web e software. Tenho experiência prática tanto com frontend quanto com backend, o que me permite criar soluções completas e integradas. Meu foco é desenvolver aplicações eficientes e escaláveis que atendam às necessidades reais de usuários e empresas.</p>
     </div>
   </section>
-
+  
 
 
 
@@ -83,7 +77,7 @@
   
     <div class="experienciasContainer">
       <div>
-        <img src="./assets/images/experiencia1.png" alt="Ilustração Experiências">
+        <img src="/images/experiencia1.png" alt="Ilustração Experiências">
         <div class="experienciaDetalhes">
           <h2>Front End</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
@@ -92,7 +86,7 @@
       </div>
   
       <div>
-        <img src="./assets/images/experiencia2.png" alt="Ilustração Experiências">
+        <img src="/images/experiencia2.png" alt="Ilustração Experiências">
         <div class="experienciaDetalhes">
           <h2>Front End</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
@@ -101,7 +95,7 @@
       </div>
   
       <div>
-        <img src="./assets/images/experiencia3.png" alt="Ilustração Experiências">
+        <img src="/images/experiencia3.png" alt="Ilustração Experiências">
         <div class="experienciaDetalhes">
           <h2>Front End</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
@@ -110,7 +104,7 @@
       </div>
   
       <div>
-        <img src="./assets/images/experiencia4.png" alt="Ilustração Experiências">
+        <img src="/images/experiencia4.png" alt="Ilustração Experiências">
         <div class="experienciaDetalhes">
           <h2>Front End</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
